--- a/sass/style.scss
+++ b/sass/style.scss
@@ -122,3 +122,28 @@ body {
     margin: 0 10px 0 0;
   }
 }
+
+.tag-size-1 {
+  font-size: 12px;
+}
+
+.tag-size-2 {
+  font-size: 14px;
+}
+
+.tag-size-3 {
+  font-size: 18px;
+}
+
+.tag-size-4 {
+  font-size: 20px;
+}
+
+.tag-size-5 {
+  font-size: 24px;
+}
+
+.sidebar .tags li,
+.sidebar .authors li {
+  display: inline;
+}
